# Luna_astro_tg_bot

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  index.html  luna_dev.db  nginx.conf  privacy.html  pyproject.toml  requirements-dev.txt  requirements.txt  terms.html
alembic/: env.py
alembic/versions/: 0001_init.py  0002_referral.py  0003_persona_and_spreads.py  0004_is_active_and_nullable_inv_id.py  0005_follow_up.py  0006_unique_daily_limit.py  0007_yookassa_payment_id.py  0008_robokassa_and_stars.py
assets/: README.txt
bot/: config.py  main.py  scheduler.py
bot/db/: crud.py  models.py  session.py
bot/handlers/: admin.py  astro.py  errors.py  free_chat.py  history.py  media.py  payment.py  profile.py  start.py  tarot.py
bot/keyboards/: inline.py
bot/middleware/: throttling.py
bot/services/: cache_service.py  card_engine.py  claude_service.py  limit_service.py  payment_service.py  yookassa_service.py
bot/utils/: __init__.py  text_utils.py
data/: fallback_responses.json  tarot_cards.json  zodiac_signs.json
docs/: DEPLOY_REGRU.md  LANDING_DESIGN_BRIEF.md  PRIVACY_POLICY.md
tests/: conftest.py  test_cache_service.py  test_card_engine.py  test_crud_payments.py  test_crud_referral.py  test_crud_set_pro.py  test_crud_spreads.py  test_fallback.py  test_limit_service.py  test_payment_service.py  test_persona.py  test_text_utils.py  test_text_validation.py  test_zodiac_data.py
